# MT

./: .gitignore  README.md  _bokeh_page.html  _root_page.html  codex_export_run.ini  pyproject.toml  start_bokeh.cmd  start_bokeh_wsl.sh  test.ini  test_config.ini  tmp_browser_click_probe.out  tmp_browser_click_probe.py  tmp_browser_probe.err  tmp_browser_probe.py  tmp_service_logs_probe.out  tmp_service_logs_probe.py  tmp_wfa_click_probe.err  tmp_wfa_click_probe.py
docs/: ARCHITECTURE_PLAN.md
mql5/: CodexHistoryExport.mq5
output/: bybit_mt5_instruments_table.csv
src/: app_config.py
tests/: conftest.py  test_bokeh_adapters.py  test_bokeh_table_sorting.py  test_bokeh_view_utils.py  test_browser_state.py  test_catalog_groups.py  test_co_movers.py  test_commission_profiles.py  test_contracts_unit_root.py  test_distance_backtest.py  test_distance_optimizer.py  test_distance_optimizer_cancellation.py  test_file_state.py  test_health.py  test_instrument_groups.py  test_johansen_scan.py  test_johansen_universe_scan.py  test_meta_selector.py  test_metric_formulas.py  test_mt5_binary_export.py  test_mt5_export_catalog_sync.py  test_mt5_terminal_export_sync.py  test_numeric_inputs.py  test_ols_integration.py  test_optimizer_clipboard_to_markdown.py  test_optimizer_route.py  test_optimizer_scanner.py  test_portfolio_domain.py  test_portfolio_store.py  test_quote_storage.py  test_resample.py  test_scan_group_filtering.py  test_scan_results_loader.py  test_scan_route.py  test_scan_storage.py  test_scanner_estimate.py  test_scanner_results.py  test_table_export.py  (+7 more)
(+183 files in other folders)
