[project]
name = "mt-pair-trading-service"
version = "0.1.0"
description = "High-performance MetaTrader-backed pair trading backtesting service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "bokeh>=3.8.0",
  "fastapi>=0.116.0",
  "MetaTrader5>=5.0.5470",
  "numba>=0.61.0",
  "numpy>=2.1,<2.2",
  "orjson>=3.11.0",
  "polars>=1.34.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "pyarrow>=19.0.0",
  "redis>=6.0.0",
  "scipy>=1.15.0",
  "statsmodels>=0.14.5",
  "structlog>=25.4.0",
  "tenacity>=9.1.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]
optimizer = [
  "deap>=1.4.3",
  "optuna>=4.4.0",
]
gpu = [
  "cupy-cuda13x>=13.5.0",
  "numba-cuda>=0.20.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app_config"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]